# iplot-mpl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  examples.ipynb  justfile  pyproject.toml
interactive_figure/: __init__.py  core.py  fitting.py
tests/: __init__.py  conftest.py  test_fitting.py  test_interactive_plot.py  test_widget_configs.py  test_widget_creation.py
