[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iplot-mpl"
version = "0.2.1"
description = "Interactive matplotlib figures with ipywidgets for Jupyter Notebooks"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Tim Duka"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Jupyter",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
keywords = ["jupyter", "matplotlib", "ipywidgets", "interactive", "plotting", "visualization", "fitting", "lmfit"]

dependencies = [
    "matplotlib>=3.5.0",
    "ipywidgets>=8.0.0",
    "ipython>=7.0.0",
    "ipykernel>=7.0.0",
    "ipympl>=0.9.0",
    "lmfit>=1.2.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/timduka/iplot-mpl"
Documentation = "https://github.com/timduka/iplot-mpl#readme"
Repository = "https://github.com/timduka/iplot-mpl.git"
Issues = "https://github.com/timduka/iplot-mpl/issues"
Changelog = "https://github.com/timduka/iplot-mpl/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["interactive_figure*"]

[tool.setuptools.package-data]
interactive_figure = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped internal helper functions
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["ipywidgets.*", "matplotlib.*", "lmfit.*", "IPython.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["interactive_figure.core"]
# Disable union-attr for GUI code where figure state is managed dynamically
disable_error_code = ["union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["interactive_figure"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
show_missing = true
